@@ -1,3 +1,11 @@
+2009-06-26  Ross Younger  <wry@ecoscentric.com>
+
+	* src/nand.c: Created for NAND utilities
+	* cdl/redboot.cdl: Build nand.c if it's appropriate.
+	CYGMEM_REDBOOT_WORKSPACE_HEAP defaults on where active.
+	* fs/fileio.c: Try to be more helpful if mount failed.
+	* main.c: If mallinfo exists, report on it.
+
 2009-06-24  Nick Garnett  <nickg@ecoscentric.com>
 
 	* cdl/redboot.cdl:
